# Projet_7_Modele_de_scoring

./: .gitignore  .slugignore  README.md  api.py  app_dashboard.py  call_api.py  flask_app.log.1  flask_app.log.2  flask_app.log.3  flask_app.log.4  flask_app.log.6  key-pair.pem  launch.json  modele_xgboost.py  mon_modele.json  procfile  pyproject.toml  python_test.py  requirements.txt  setup.sh 
.ebextensions/: python.config
.github/workflows/: pytest.yml
projet_7/: dossier_global_code_API.ipynb
tests/: pytest.yml  test_api.py
