[tool.poetry]
name = "projet-7"
version = "0.1.0"
description = ""
authors = ["Tamara Daniel-Tricot <tamara.daniel-tricot@veolia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
xgboost = "2.0.3"
flask = "^3.0.3"
numpy = "^2.0.0"
requests = "^2.32.3"
flask-debugtoolbar = "^0.15.1"
logging = "^0.4.9.6"
plotly = "^5.22.0"
streamlit = "^1.36.0"
shap = "^0.46.0"
seaborn = "^0.13.2"
poetry-plugin-export = "^1.8.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
